--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:1.1.0"
     implementation "androidx.fragment:fragment:1.1.0"
     implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta3"
+    implementation "com.android.support:design:29.0.2"
 
     // Android KTX
     implementation 'androidx.core:core-ktx:1.1.0'
