--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,10 @@ dependencies {
 
     // GraphView
     implementation 'com.jjoe64:graphview:4.2.2'
+
+    // Recycler View
+    implementation 'com.android.support:recyclerview-v7:29.0.0'
+
+    // Card Layout
+    implementation 'com.android.support:cardview-v7:29.0.0'
 }
